--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,9 @@
     text-decoration:none;
     text-shadow:0px 1px 0px #283966;
 }
+.pointer {
+    cursor: pointer;
+}
 .backup_button:hover {
     background:-webkit-gradient(linear, left top, left bottom, color-stop(0.05, #476e9e), color-stop(1, #7892c2));
     background:-moz-linear-gradient(top, #476e9e 5%, #7892c2 100%);
@@ -824,7 +827,7 @@ width: 18px;
 
 }
 @media only screen and (max-width: 1124px) {
- 
+
 }
 @media only screen and (max-width: 758px) {
 /*
